--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
